# WBSF

./: .gitignore  CMakeLists.txt  LICENSE
LandTrendDemo/: LandTrendDemo.cpp
LandTrendImages/: LandTrend.cpp  LandTrend.h  LandTrendApp.cpp
LandTrendImages/cb/: LandTrendImages.depend
LandTrendImages/msvc/: LandTrendImages.sln  LandTrendImages.vcxproj  LandTrendImages.vcxproj.filters
Landsat2RGB/: Landsat2RGB.cpp  Landsat2RGB.h  Landsat2RGBApp.cpp
LandsatIndices/: LandsatIndices.cpp  LandsatIndices.h  LandsatIndicesApp.cpp
basic/: GeoBasic.cpp  Statistic.cpp  Statistic.h  UtilStd.h
doc/: DoxyfileARModel.txt
geomatic/: GDALDatasetEx.h  LandTrendUtil.cpp  UtilGDAL.cpp
lib/Debug/: Basic.idb
src/: WBSFconfig.h
src/Basic/: ApproximateNearestNeighbor.cpp  ApproximateNearestNeighbor.h  CMakeLists.txt  CSV.cpp  CSV.h  Callback.cpp  Callback.h  CallcURL.cpp  CallcURL.h  CppUserPrefs.h  Dbf3.cpp  Dbf3.h  ERMsg.h  Event.h  GeoBasic.cpp  GeoBasic.h  LRUCache.h  Location.cpp  Location.h  ModelStat.cpp  ModelStat.h  Mtrx.cpp  Mtrx.h  SearchResult.cpp  SearchResult.h  Shore.cpp  Shore.h  SimulatedAnnealing.cpp  SimulatedAnnealing.h  Statistic.cpp  Statistic.h  Sun.cpp  Sun.h  TimeStep.cpp  TimeStep.h  UtilMath.cpp  UtilMath.h  UtilStd.cpp  UtilStd.h  UtilTime.cpp  (+8 more)
src/Basic/ANN/: ANN.cpp  ANN.h  ANNperf.h  ANNx.h  bd_tree.cpp  bd_tree.h  brute.cpp  kd_dump.cpp  kd_pr_search.cpp  kd_search.cpp  kd_tree.cpp  kd_tree.h  kd_util.cpp  perf.cpp  pr_queue.h  pr_queue_k.h
src/Basic/ARModel/: ARModel.cpp  ARModel.h
src/Basic/ERMsg/: Ererreur.cpp  Ererreur.h  Erexcept.cpp  Sycptref.h  Syenvmsg.cpp  Syenvmsg.h  Symessag.cpp  Symessag.h
src/Basic/KMeanLocal/: KM_ANN.cpp  KMrand.cpp  KMrand.h
src/Basic/Newmat/: Regression.cpp  Regression.h  include.h  myexcept.cpp  myexcept.h  newmat6.cpp
src/Basic/json/: json11.cpp  json11.hpp
src/Basic/mpfit/: mpfit.cpp  mpfit.h
src/Basic/muparser/: muParserDef.h  muParserInt.cpp  muParserInt.h  muParserTest.cpp  muParserTest.h
src/Basic/pugixml/: pugixml.cpp
src/Basic/tclap/: Arg.h
src/Basic/tinyxml2/: tinyxml2.cpp  tinyxml2.h
src/Geomatic/: CMakeLists.txt  GDAL.h  GDALDatasetEx.cpp  GDALDatasetEx.h  ImageParser.cpp  ImageParser.h  LandTrendCore.h  LandTrendUtil.cpp  LandsatDataset2.cpp  LandsatDataset2.h  Projection.cpp  Projection.h  SFBoudingBox.cpp  SFBoudingBox.h  SfcGribsDatabase.cpp  SfcGribsDatabase.h  ShapeFile.cpp  ShapeFile.h  ShapeFileBase.cpp  ShapeFileBase.h  ShapeFileHeader.cpp  ShapeFileHeader.h  ShapeFileIndex.cpp  ShapeFileIndex.h  ShoreCreator.cpp  ShoreCreator.h  UtilGDAL.cpp  UtilGDAL.h
src/ModelBased/: BioSIMModelBase.cpp  BioSIMModelBase.h  CMakeLists.txt  CommunicationStream.cpp  CommunicationStream.h  ContinuingRatio.cpp  ContinuingRatio.h  DevRateEquation.cpp  DevRateEquation.h  EntryPoint.cpp  EntryPoint.h  EquationTableLookup.cpp  EquationTableLookup.h  GridHelp.cpp  GridHelp.h  IndividualBase.cpp  IndividualBase.h  InitialPopulation.cpp  InitialPopulation.h  InputParam.cpp  InputParam.h  MTClim43.cpp  MTClim43.h  Model.cpp  Model.h  ModelBaseError.cpp  ModelBaseError.h  ModelDistribution.cpp  ModelDistribution.h  ModelInput.cpp  ModelInput.h  ModelInputParameter.cpp  ModelInputParameter.h  ModelOutputVariable.cpp  ModelOutputVariable.h  OutputFile.cpp  OutputFile.h  ParametersVariations.cpp  ParametersVariations.h  SerializeRect.h  (+19 more)
src/WeatherBased/: ASCE_ETc.cpp  ASCE_ETc.h  AdvancedNormalStation.cpp  AdvancedNormalStation.h  AmountPpt.cpp  AmountPpt.h  CMakeLists.txt  DailyDatabase.cpp  DailyDatabase.h  DegreeDays.cpp  DegreeDays.h  Dimension.cpp  Dimension.h  Duration.h  Evapotranspiration.cpp  Evapotranspiration.h  GrowingSeason.cpp  GrowingSeason.h  HourlyDatabase.cpp  HourlyDatabase.h  MTClim43.cpp  NormalsData.cpp  NormalsData.h  NormalsDatabase.cpp  NormalsDatabase.h  NormalsStation.cpp  NormalsStation.h  SnowAnalysis.cpp  SnowAnalysis.h  SnowMelt.cpp  WaterTemperature.cpp  WaterTemperature.h  WeatherCorrection.cpp  WeatherCorrection.h  WeatherDataSection.cpp  WeatherDataSection.h  WeatherDatabase.cpp  WeatherDatabase.h  WeatherDatabaseCreator.cpp  WeatherDatabaseCreator.h  (+12 more)
test/: CMakeLists.txt  TestUtilTime.cpp  main.cpp  testARModel.cpp
test/ARModel/: testARModel.cpp
test/Basic/: TestUtilTime.cpp  TestZipCSVIterator.cpp
test/Data/: filename.xml
(+83 files in other folders)
